modifies html index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="timer_script.js"></script>
 </head>
 <body>
-
+    <div id="msg_div">Set Timer:</div>
+    <div id="timer_div">
+        <form id="timer_form">
+            <input type="text" />
+        </form>
+    </div>
 </body>
 </html>
