--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <script src="timer_script.js"></script>
 </head>
 <body>
-    <div id="msg_div">Set Timer:</div>
+    <div id="msg_div">Set Timer in minutes:</div>
     <div id="timer_div">
         <form id="timer_form">
-            <input type="text" />
+            <input type="number" name="set_timer"/>
+            <input type="submit" name="Start" />
         </form>
     </div>
 </body>
