--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="timer_div">
         <form id="timer_form">
             <input type="number" name="set_timer"/>
-            <input type="submit" name="Start" />
+            <input type="submit" title="Start" />
         </form>
     </div>
 </body>
